--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   </div>
 
   <!-- Cards -->
-  <div class="cards items-center flex-column-gap-y-4">
+  <div class="parent-container cards items-center flex-column-gap-y-4">
     
   </div>
   <!-- <div class="cards flex flex-col justify-center items-center">
