--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <div class="flex space-x-4">
               <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
               <a href="#form" class="bg-gray-700 text-white rounded-md px-3 py-2 text-sm font-medium transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:bg-gray-900 duration-300 ..." aria-current="page">Make a donation!</a>
+              <a href="#" class="bg-gray-700 text-white rounded-md px-3 py-2 text-sm font-medium transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:bg-gray-900 duration-300 ..." aria-current="page">List of Donors</a>
               <a href="https://sdgs.un.org/goals" target="_blank" class="text-white bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:bg-gray-900 duration-300 ..." aria-current="page">Learn More About SDGs</a>
             </div>
           </div>
@@ -98,6 +99,12 @@
     <div class="w-full max-w-xs mx-auto"> <!-- Add mx-auto to center the form -->
       <form id = "form" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
         <div class="mb-4">
+          <label class="block text-gray-700 text-sm font-bold mb-2" for="donor">
+            Donor/ Organization Name: 
+          </label>
+          <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="donor" type="text" placeholder="Donor/Organization Name">
+        </div>
+        <div class="mb-4">
           <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
             County: 
           </label>
@@ -108,7 +115,13 @@
             Amount
           </label>
           <input class="shadow appearance-none border border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="amount" type="number" placeholder="Amount in USD">
-          <p id="warning" class="text-red-500 text-xs italic">Please enter an amount</p>
+          <p id="warning" class="text-xs italic">
+            Please enter an amount
+          </p>
+          <p id="thankYouMessage" class="hidden text-xs italic">
+            <!-- Thank you for your donation -->
+          </p>
+          
         </div>
         <div class="flex items-center justify-between">
           <button id="makeDonation" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
@@ -117,6 +130,9 @@
         </div>
       </form>
     </div>
+  </div>
+  <div class="flex flex-col items-center justify-center h-screen" id="donors-list">
+    <h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900">List of donors</h1>
   </div>
   
 </body>
