--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
       </form>
     </div>
   </div>
-  <div class="flex flex-col items-center justify-center h-screen" id="donors-list">
+  <!-- <div class="flex flex-col items-center justify-center h-screen" id="donors-list">
     <h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900">List of donors</h1>
-  </div>
+  </div> -->
   
 </body>
   
