Add County functionality

--- a/index.html
+++ b/index.html
@@ -105,6 +105,40 @@
     
   </div> -->
 
+
+  <!-- Add a county -->
+  <div class="flex flex-col items-center justify-center ">
+    <h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900">Add a County to the above counties</h1>
+    </div>
+
+  <div class="w-full max-w-xs mx-auto">
+    <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4" id="add-county">
+      <div class="mb-4">
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="new-county">
+          County Name
+        </label>
+        <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="new-county" type="text" placeholder="County Name">
+      </div>
+      <div class="mb-4">
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="new-image">
+          Image URL
+        </label>
+        <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="new-image" type="text" placeholder="Image URL goes here">
+      </div>
+      <div class="mb-6">
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="new-donations">
+          Donations received so far
+        </label>
+        <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="new-donations" type="number" placeholder="Donations received so far">
+      </div>
+      <div class="flex items-center justify-between">
+        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
+          Add County
+        </button>
+      </div>
+    </form>
+  </div>
+
   <!-- Make a donation -->
   <div class="flex flex-col items-center justify-center h-screen">
     <h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900">Make a donation today!</h1>
