--- a/index.html
+++ b/index.html
@@ -137,6 +137,22 @@
         </button>
       </div>
     </form>
+    <!-- Delete a County -->
+    <button class="bg-blue-300 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" id="deleteBtn" type="button">
+      Remove a county from the above list instead?
+    </button>
+    <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4" id="deleteCounty">
+      <div class="mb-4">
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="donor">
+          County: 
+        </label>
+        <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="countyToDelete" type="text" placeholder="Name of county to delete">
+      </div>
+      <div class="flex items-center justify-between">
+        <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
+          Delete County
+        </button>
+    </form>
   </div>
 
   <!-- Make a donation -->
