--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="./style.css">
+  <title>&#129330 Zero Hunger </title>
 </head>
 <body>
   <nav class="bg-gray-700 flex items-center">
